[veSync] Device support enhancements
Device support enhancements
Signed-off-by: David Goodyear <david.goodyear@gmail.com>